// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Entry /> It renders entry with history 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="entry-container"
    >
      <h1>
        PHP
      </h1>
      <img
        alt="PHP"
        className="entry-logo"
        src="https://www.php.net/images/logos/php-logo.svg"
      />
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="badges"
    >
      <Badge
        className="Hold"
        icon="map-marker"
        text="Hold"
      />
      <Badge
        className=""
        icon="clock-o"
        text="Jan 1, 2004"
      />
    </div>
    <div
      className="twelve.columns"
    >
      <ReactMarkdown
        astPlugins={Array []}
        escapeHtml={true}
        plugins={Array []}
        rawSourcePos={false}
        renderers={Object {}}
        skipHtml={false}
        source="Description"
        sourcePos={false}
        transformLinkUri={[Function]}
      />
    </div>
    <h2>
      Rationale
    </h2>
    <ReactMarkdown
      astPlugins={Array []}
      escapeHtml={true}
      plugins={Array []}
      rawSourcePos={false}
      renderers={Object {}}
      skipHtml={false}
      source="Rationale"
      sourcePos={false}
      transformLinkUri={[Function]}
    />
    <Related
      related={Array []}
    />
    <History
      history={
        Array [
          Object {
            "date": "Jan 1, 2004",
            "ringName": "Adopt",
          },
          Object {
            "date": "Mar 20, 2018",
            "ringName": "Hold",
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`<Entry /> It renders entry with related links 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="entry-container"
    >
      <h1>
        Java
      </h1>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="badges"
    >
      <Badge
        className="Adopt"
        icon="map-marker"
        text="Adopt"
      />
      <Badge
        className=""
        icon="clock-o"
        text="Mar 20, 2018"
      />
    </div>
    <div
      className="twelve.columns"
    >
      <ReactMarkdown
        astPlugins={Array []}
        escapeHtml={true}
        plugins={Array []}
        rawSourcePos={false}
        renderers={Object {}}
        skipHtml={false}
        source="Description"
        sourcePos={false}
        transformLinkUri={[Function]}
      />
    </div>
    <h2>
      Rationale
    </h2>
    <ReactMarkdown
      astPlugins={Array []}
      escapeHtml={true}
      plugins={Array []}
      rawSourcePos={false}
      renderers={Object {}}
      skipHtml={false}
      source="Rationale"
      sourcePos={false}
      transformLinkUri={[Function]}
    />
    <Related
      related={
        Array [
          Object {
            "file": "php.html",
            "name": "PHP",
          },
        ]
      }
    />
    <History
      history={Array []}
    />
  </div>
</div>
`;

exports[`<Entry /> It renders inactive badge 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="entry-container"
    >
      <h1 />
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="badges"
    >
      <Badge
        className="Hold"
        icon="map-marker"
        text="Hold"
      />
      <Badge
        className=""
        icon="clock-o"
        text="Jan 1, 1970"
      />
      <Badge
        className="inactive"
        icon="warning"
        text="Inactive"
      />
    </div>
    <div
      className="twelve.columns"
    >
      <ReactMarkdown
        astPlugins={Array []}
        escapeHtml={true}
        plugins={Array []}
        rawSourcePos={false}
        renderers={Object {}}
        skipHtml={false}
        source="Description"
        sourcePos={false}
        transformLinkUri={[Function]}
      />
    </div>
    <h2>
      Rationale
    </h2>
    <ReactMarkdown
      astPlugins={Array []}
      escapeHtml={true}
      plugins={Array []}
      rawSourcePos={false}
      renderers={Object {}}
      skipHtml={false}
      source="Rationale"
      sourcePos={false}
      transformLinkUri={[Function]}
    />
    <Related
      related={Array []}
    />
    <History
      history={
        Array [
          Object {
            "date": "Jan 1, 1970",
            "ringName": "Adopt",
          },
          Object {
            "date": "Mar 20, 2018",
            "ringName": "Hold",
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`<Entry /> It renders logotype if present 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="entry-container"
    >
      <h1>
        PHP
      </h1>
      <img
        alt="PHP"
        className="entry-logo"
        src="https://www.php.net/images/logos/php-logo.svg"
      />
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="badges"
    >
      <Badge
        className="Hold"
        icon="map-marker"
        text="Hold"
      />
      <Badge
        className=""
        icon="clock-o"
        text="Jan 1, 2004"
      />
    </div>
    <div
      className="twelve.columns"
    >
      <ReactMarkdown
        astPlugins={Array []}
        escapeHtml={true}
        plugins={Array []}
        rawSourcePos={false}
        renderers={Object {}}
        skipHtml={false}
        source="Description"
        sourcePos={false}
        transformLinkUri={[Function]}
      />
    </div>
    <h2>
      Rationale
    </h2>
    <ReactMarkdown
      astPlugins={Array []}
      escapeHtml={true}
      plugins={Array []}
      rawSourcePos={false}
      renderers={Object {}}
      skipHtml={false}
      source="Rationale"
      sourcePos={false}
      transformLinkUri={[Function]}
    />
    <Related
      related={Array []}
    />
    <History
      history={
        Array [
          Object {
            "date": "Jan 1, 2004",
            "ringName": "Adopt",
          },
          Object {
            "date": "Mar 20, 2018",
            "ringName": "Hold",
          },
        ]
      }
    />
  </div>
</div>
`;
